fix: corregir corte específico en dropdown de "La Firma"  - Ajuste CSS para alinear el menú del penúltimo ítem hacia la izquierda - Soluciona problema residual en pantallas anchas sin afectar otros ítems
Added specific adjustments for dropdown menu positioning in the navbar.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
     left: auto;
     right: 0; /* Alinea a la izquierda los del borde derecho */
 }
+        /* Arreglo específico para "La Firma" (penúltimo ítem) */
+.navbar-nav .dropdown-hover:nth-last-child(2) .dropdown-menu {
+    left: auto;
+    right: 0;
+    transform: translateX(-100%);
+}
     </style>
 </head>
 <body>
@@ -157,6 +163,7 @@
     </script>
 </body>
 </html>
+
 
 
 
